# clinical_predictor

./: Requirements.txt  main.py  pyproject.toml  setup.py
.github/workflows/: cicd-with-no-test.yml  cicd-with-test.yml  cicd.yaml
app/: api.py  interface.py
core/: dataset.py  decision_tree.py  logistic_regression.py  model.py  neural_network.py  optimizer.py
data/: test_data.csv  train_data.csv
models/: clinical_model.pkl
pipeline/: evaluator.py  trainer.py
tests/: test_models.py  test_pipeline.py  test_utils.py
utils/: metrics.py  processing.py
