[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-predictor"
version = "1.0.0"
description = "A clinical prediction system using machine learning"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "black",
    "isort",
    "pylint",
    "bandit",
    "flake8",
]
api = [
    "flask",
]
ui = [
    "streamlit",
]

[project.urls]
Homepage = "https://github.com/yourusername/clinical-predictor"
Repository = "https://github.com/yourusername/clinical-predictor"

[tool.setuptools]
packages = ["core", "pipeline", "utils", "app"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=core --cov=utils --cov=pipeline"
